repaired bug that would occur on app start when on mobile settings, and changed quickshop display for future CSS improvements

--- a/src/components/QuickShop/style.css
+++ b/src/components/QuickShop/style.css
@@ -57,3 +57,7 @@
     display: none;
   }
 }
+
+.quickshop-closed {
+  display: none
+}
